--- a/sub/web1/index.html
+++ b/sub/web1/index.html
@@ -27,7 +27,15 @@
 -->
 
 <body>
-    <p class="banner">배너</p>
+    <div class="banner">
+        <div class="banner1">
+            <a href="#"><img src="img/banner_01.jpg" alt="01"></a>
+        </div><!-- .banner1 end -->
+        <div class="banner2">
+            <a href="#"><img src="img/banner_02.jpg" alt="02"></a>
+        </div><!-- .banner2 end -->
+    </div>
+
     <header>
         <section class="header_inner">
             <div class="util">
@@ -41,13 +49,14 @@
             <h1><a href="#"><img src="img/logo.png" alt="logo_img"></a></h1>
             <form class="header_search">
                 <input type="text" placeholder="8월 혜택 박스 31% 할인♬" />
+
             </form><!-- .header_search end -->
 
             <div class="my_menu">
                 <ul>
-                    <li><a href="#">쿠폰</a></li>
-                    <li><a href="#">마이페이지</a></li>
-                    <li><a href="#">장바구니</a></li>
+                    <a href="#"><img src="img/icon_coupon.png" alt="coupon"></a>
+                    <a href="#"><img src="img/icon_mypage.png" alt="mypage"></a>
+                    <a href="#"><img src="img/icon_cart.png" alt="cart"></a>
                 </ul>
             </div><!-- .my_menu end -->
         </section><!-- .header_inner end -->
@@ -83,7 +92,7 @@
                     <a href="#">이벤트</a>
                 </li><!-- .depth01 end -->
                 <li class="depth01">
-                    <a href="#">특급배송</a>
+                    <a href="#"><img src="img/sec03_icon.png" alt="icon"></a>
                 </li><!-- .depth01 end -->
             </ul>
         </nav>
@@ -96,50 +105,83 @@
     <section class="section01">
         <h3>지금 이 순간 깜짝 타임 세일!</h3>
         <div class="timer">
-            <p>0</p>
-            <p>2</p>
-            <p>1</p>
-            <p>8</p>
-            <p>1</p>
-            <p>3</p>
-            <p>0</p>
-            <p>8</p>
+            <div>
+                <p>0</p>
+                <p>2</p>
+            </div>
+            <div>
+                <p>1</p>
+                <p>8</p>
+            </div>
+            <div>
+                <p>1</p>
+                <p>3</p>
+            </div>
+            <div>
+                <p>0</p>
+                <p>8</p>
+            </div>
         </div><!-- .timer end -->
-        <div class="list">
-            <div class="item">
-                <img src="img/sec01_img01.jpg" alt="img01">
+        <div class="all_list">
+            <div class="item1">
+                <img src="img/sec01_img04.jpg" alt="4"><!-- 292300/148 --> 
                 <div>
                     <dl>
-                        <dt>라이프포스</dt>
-                        <dd>운동 중 맛있는 근육 회복, BCAA 3종 최대 45% 할인</dd>
-                        <p>40,000원</p>
-                        <p>24,000원</p>
+                        <dt></dt>
+                        <dd>유로 간편한 컷팅! 컷팅샷 63% 할인</dd>
+                        <p></p>
+                        <p></p>
                     </dl>
                 </div>
-            </div><!-- .item end 01 -->
-            <div class="item">
-                <img src="img/sec01_img02.jpg" alt="img02">
+            </div><!-- .item1 end -->
+            <div class="list">
+                <div class="item">
+                    <img src="img/sec01_img01.jpg" alt="img01">
+                    <div>
+                        <dl>
+                            <dt>라이프포스</dt>
+                            <dd>운동 중 맛있는 근육 회복, BCAA 3종 최대 45% 할인</dd>
+                            <p>40,000원</p>
+                            <p>24,000원</p>
+                        </dl>
+                    </div>
+                </div><!-- .item end 01 -->
+                <div class="item">
+                    <img src="img/sec01_img02.jpg" alt="img02">
+                    <div>
+                        <dl>
+                            <dt>더진국</dt>
+                            <dd>맑은 곰탕 최대 36% 할인</dd>
+                            <p>29,500원</p>
+                            <p>18,900원</p>
+                        </dl>
+                    </div>
+                </div><!-- .item end 02 -->
+                <div class="item">
+                    <img src="img/sec01_img03.jpg" alt="img03">
+                    <div>
+                        <dl>
+                            <dt>잇메이트 / 맛있닭</dt>
+                            <dd>닭가슴살 도시락 & 볶음밥 35% 할인</dd>
+                            <p>46,640원</p>
+                            <p>28,800원</p>
+                        </dl>
+                    </div>
+                </div><!-- .item end 03 -->
+            </div>
+            <div class="item5">
+                <img src="img/sec01_img05.jpg" alt="5">
                 <div>
                     <dl>
-                        <dt>더진국</dt>
-                        <dd>맑은 곰탕 최대 36% 할인</dd>
-                        <p>29,500원</p>
-                        <p>18,900원</p>
+                        <dt>쉴드 X 제비스코</dt>
+                        <dd>콜라보 시그니처캡 44% 할인</dd>
+                        <p>30,000</p>
+                        <p>17,000원</p>
                     </dl>
                 </div>
-            </div><!-- .item end 02 -->
-            <div class="item">
-                <img src="img/sec01_img03.jpg" alt="img03">
-                <div>
-                    <dl>
-                        <dt>잇메이트 / 맛있닭</dt>
-                        <dd>닭가슴살 도시락 & 볶음밥 35% 할인</dd>
-                        <p>46,640원</p>
-                        <p>28,800원</p>
-                    </dl>
-                </div>
-            </div><!-- .item end 03 -->
-        </div>
+
+            </div><!-- .item5 end -->
+        </div><!-- .all_list end -->
     </section><!-- .section01 end -->
 
     <section class="section02">
@@ -198,6 +240,7 @@
             </ul>
             <div class="top_category">
                 <div class="list01">
+                    <p>1</p>
                     <img src="img/sec03_img01.jpg" alt="1">
                     <div>
                         <dl>
@@ -217,6 +260,7 @@
                 </div><!-- .list01 end -->
                 <div class="list2345">
                     <div class=box>
+                        <p>2</p>
                         <img src="img/sec03_img02.jpg" alt="2">
                         <div>
                             <dl>
@@ -233,6 +277,7 @@
                         </div>
                     </div><!-- .box end 01 -->
                     <div class=box>
+                        <p>3</p>
                         <img src="img/sec03_img04.jpg" alt="3">
                         <div>
                             <dl>
@@ -249,6 +294,7 @@
                         </div>
                     </div><!-- .box end 02 -->
                     <div class=box>
+                        <p>4</p>
                         <img src="img/sec03_img03.jpg" alt="4">
                         <div>
                             <dl>
@@ -265,6 +311,7 @@
                         </div>
                     </div><!-- .box end 03 -->
                     <div class=box>
+                        <p>5</p>
                         <img src="img/sec03_img05.jpg" alt="5">
                         <div>
                             <dl>
@@ -283,12 +330,150 @@
                 </div><!-- .list2345 end -->
             </div><!-- .top_category end -->
         </div><!-- .category01 end -->
-
-
-
-
-
+        <div class="category02">
+            <ul>
+                <li>비건식품</li>
+                <li>계란/난백/콩</li>
+                <li>견과/고구마/감자</li>
+                <li>반찬/밀키트/안주</li>
+                <li>건강식품</li>
+                <li>수산/해산</li>
+                <li>소스/오일</li>
+                <li>샐러드/패키지</li>
+                <li>운동/생활용품</li>
+                <li>베이비/키즈</li>
+            </ul>
+            <div class="top_category">
+                <div class="list01">
+                    <p>1</p>
+                    <img src="img/sec03_img06.jpg" alt="1">
+                    <div>
+                        <dl>
+                            <dt>채식플랜</dt>
+                            <dd>비건 도시락 혼합 191g~235g</dd>
+                            <div class="price">
+                                <p>35,100원</p>
+                                <p>(100g당:2,932원~3,063원)</p>
+                            </div><!-- .price end -->
+                            <div class="score">
+                                <p>★</p>
+                                <p>4.7</p>
+                                <p>(17)</p>
+                            </div><!-- .score end -->
+                        </dl>
+                    </div>
+                </div><!-- .list01 end -->
+                <div class="list2345">
+                    <div class=box>
+                        <p>2</p>
+                        <img src="img/sec03_img07.jpg" alt="2">
+                        <div>
+                            <dl>
+                                <dt>채식플랜</dt>
+                                <dd>베지 도시락 혼합 207g~248g</dd>
+                                <p>35,100원</p>
+                                <p>(100g당:2,258원~2,359원)</p>
+                                <div class="score">
+                                    <p>★</p>
+                                    <p>5</p>
+                                    <p>(7)</p>
+                                </div>
+                            </dl>
+                        </div>
+                    </div><!-- .box end 01 -->
+                    <div class=box>
+                        <p>3</p>
+                        <img src="img/sec03_img08.jpg" alt="3">
+                        <div>
+                            <dl>
+                                <dt>프레쉬홈</dt>
+                                <dd>이지 샐러드 혼합 90g</dd>
+                                <p>10,400원</p>
+                                <p>(10g당:218원~232원)</p>
+                                <div class="score">
+                                    <p>★</p>
+                                    <p>4.7</p>
+                                    <p>(2,756)</p>
+                                </div><!-- .score end -->
+                            </dl>
+                        </div>
+                    </div><!-- .box end 02 -->
+                    <div class=box>
+                        <p>4</p>
+                        <img src="img/sec03_img09.jpg" alt="4">
+                        <div>
+                            <dl>
+                                <dt>프레쉬홈</dt>
+                                <dd>토핑 샐러드 혼합 180g~<br>190g</dd>
+                                <p>24,900원</p>
+                                <p>(100g당:2,538원~2,692원)</p>
+                                <div class="score">
+                                    <p>★</p>
+                                    <p>4.7</p>
+                                    <p>(775)</p>
+                                </div><!-- .score end -->
+                            </dl>
+                        </div>
+                    </div><!-- .box end 03 -->
+                    <div class=box>
+                        <p>5</p>
+                        <img src="img/sec03_img10.jpg" alt="5">
+                        <div>
+                            <dl>
+                                <dt>네이처엠</dt>
+                                <dd>나또 혼합 105g~119g</dd>
+                                <p>16,040원</p>
+                                <p>(100g당:1,962원~3,055원)</p>
+                                <div class="score">
+                                    <p>★</p>
+                                    <p>4.9</p>
+                                    <p>(44))</p>
+                                </div><!-- .score end -->
+                            </dl>
+                        </div>
+                    </div><!-- .box end 04 -->
+                </div><!-- .list2345 end -->
+            </div><!-- .top_category end -->
+        </div><!-- .category02 end -->
     </section><!-- .section03 end -->
+
+    <footer>
+        <div class="box">
+            <div class="top">
+                <ul>
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">공지사항</a></li>
+                    <li><a href="#">입점·제휴문의</a></li>
+                    <li><a href="#">이용약관</a></li>
+                    <li><a href="#"><strong>개인정보처리방침</strong></a></li>
+                    <li><a href="#">패밀리사이트</a></li>
+                </ul>
+            </div><!-- .top end -->
+            <div class="bottom">
+                <div class="box1">
+                    <img src="img/footer_logo.png" alt="footer">
+                </div><!-- .box1 end -->
+                <div class="info">
+                    <strong>(주)푸드나무</strong>
+                    <p>대표:김영문｜주소:서울특별시 마포구 월드컵북로 396, 15층(상암동, 누리꿈스퀘어 비지니스타워)｜사업자등록번호:105-87-81968 <span>사업자정보확인</span>｜통신판매업신고번호:제2015-서울마포-1508호｜개인정보책임보호자:박상필</p>
+                    <p>Copyrightⓒ랭킹닭컴 All Rights Reserved.</p>
+                </div><!-- .info end -->
+                <div class="tel">
+                    <strong>고객센터 <span>02-6405-8088</span></strong>
+                    <div class="box2">
+                        <p>FAX. 02-6351-8088</p>
+                        <p>E-mail. admin@foodnamoo.com</p>
+                    </div><!-- .box2 end -->
+                    <ul>
+                        <li><a href="#">고객의소리</a></li>
+                        <li><a href="#">1:1문의</a></li>
+                    </ul>
+
+                </div><!-- .tel end -->
+            </div><!-- .bottom end -->
+
+        </div><!-- .box end -->
+    </footer>
 
 
 
