--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </div><!-- .info end -->
             </div><!-- .item end 1 -->
             <div class="item"><!-- 2 -->
-                <img src="img/cont03_2.jpg" alt="웹사이트이름" />
+                <img src="img/thenorthface.png" alt="The Northface" />
                 <div class="info">
-                    <h4>이름 웹사이트 리뉴얼</h4>
+                    <h4>The Northface 리뉴얼</h4>
                     <p>제작 목적, 콘셉트, 웹사이트 리뉴얼을 위해 기획, 디자인, html, css언어를 활용하여 웹사이트를 구현하였습니다.</p>
                     <ul class="text">
                         <li><strong>프로그램</strong> : 포토샵, VScode</li>
@@ -43,8 +43,8 @@
                         <li><strong>제작일자</strong> : 2022.08</li>
                     </ul><!-- .text end -->
                     <ul class="btn">
-                        <li><a href="#">기획서 및 작업 과정</a></li>                    
-                        <li><a href="#">사이트 보기</a></li>                    
+                        <li><a href="sub/web2/proposal.jpg" target="_blank">기획서 및 작업 과정</a></li>                    
+                        <li><a href="sub/web2/index.html" target="_blank">사이트 보기</a></li>                    
                     </ul><!-- .btn end -->
                 </div><!-- .info end -->
             </div><!-- .item end 2 -->
