--- a/sub/web2/index.html
+++ b/sub/web2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/thenorthface.css">
 
     <!-- font_icon_xeicon -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
