--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             <div class="info_1">
                                                 <p>Jazz</p>
                                                 <ul class="btn">
-                                                    <li><a href="https://www.youtube.com/embed/GCzVti3zSAU" target="_blank">영상 원본 보기</a></li>
+                                                    <li><a href="https://youtu.be/GCzVti3zSAU" target="_blank">영상 원본 보기</a></li>
                                                 </ul><!-- .btn end -->
                                             </div><!-- .info_1 end -->
                                             <div>
@@ -183,7 +183,7 @@
                                             <div class="info_1">
                                                 <p>On&Off Button</p>
                                                 <ul class="btn">
-                                                    <li><a href="https://www.youtube.com/embed/V_osPEDSK9U" target="_blank">영상 원본 보기</a></li>
+                                                    <li><a href="https://youtu.be/V_osPEDSK9U" target="_blank">영상 원본 보기</a></li>
                                                 </ul><!-- .btn end -->
                                             </div><!-- .info_1 end -->
                                             <div>
@@ -262,7 +262,7 @@
                                             <div class="info_1">
                                                 <p>Uncomfortable Clock</p>
                                                 <ul class="btn">
-                                                    <li><a href="https://www.youtube.com/embed/unXLhGuTbg0" target="_blank">영상 원본 보기</a></li>
+                                                    <li><a href="https://youtu.be/unXLhGuTbg0" target="_blank">영상 원본 보기</a></li>
                                                 </ul><!-- .btn end -->
                                             </div><!-- .info_1 end -->
                                             <div>
@@ -342,7 +342,7 @@
                                             <div class="info_1">
                                                 <p>Bauhaus</p>
                                                 <ul class="btn">
-                                                    <li><a href="https://www.youtube.com/embed/-W2vJUSHUu8" target="_blank">영상 원본 보기</a></li>
+                                                    <li><a href="https://youtu.be/-W2vJUSHUu8" target="_blank">영상 원본 보기</a></li>
                                                 </ul><!-- .btn end -->
                                             </div><!-- .info_1 end -->
                                             <div>
@@ -425,7 +425,7 @@
                                             <div class="info_1">
                                                 <p>통영 여행</p>
                                                 <ul class="btn">
-                                                    <li><a href="https://www.youtube.com/embed/Bgyyxvd3Iv4" target="_blank">영상 원본 보기</a></li>
+                                                    <li><a href="https://youtu.be/Bgyyxvd3Iv4" target="_blank">영상 원본 보기</a></li>
                                                 </ul><!-- .btn end -->
                                             </div><!-- .info_1 end -->
                                             <div class="bar"></div>
